--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,6 @@ text-unidecode==1.3
 validate-docbr==1.8.2
 django-cors-headers==3.5.0
 validators==0.20.0
+decorator==5.1.1
+mysqlclient==2.1.1
+django-filter==2.3.0
